test_scores/negative_dimers/features/P40937.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P40937.pkl.xz